# metabolic-primordial-soup

./: .gitignore  Cargo.toml  LICENSE  README.md  config.yaml  make_video.sh  render_frames.sh  replicator_config.yaml  run.sh
src/: bff.rs  checkpoint.rs  cpu_multi.rs  cuda.rs  energy.rs  energy_grid.rs  fitness.rs  gpu.rs  islands.rs  main.rs  metrics.rs  simulation.rs
