[package]
name = "energetic-primordial-soup"
version = "0.1.0"
edition = "2021"

[features]
default = ["cpu"]
cpu = []
cuda = ["cudarc"]
wgpu-compute = ["wgpu", "pollster", "bytemuck"]

[dependencies]
rand = "0.9.2"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
cudarc = { version = "0.12", optional = true, features = ["cuda-version-from-build-system"] }
wgpu = { version = "0.20", optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }
png = "0.17"
flate2 = "1.0"  # For fast zlib compression
zstd = "0.13"   # For fast raw data compression
brotli = "7"    # For compression ratio metrics (phase transition detection)
